Fixed icon not showing in mobile device

--- a/css/foundicons.css
+++ b/css/foundicons.css
@@ -1,8 +1,8 @@
 /* font-face */
 @font-face {
   font-family: "GeneralFoundicons";
-  src: url("/fonts/foundicons.eot");
-  src: url("/fonts/foundicons.eot?#iefix") format("embedded-opentype"), url("/fonts/foundicons.woff") format("woff"), url("/fonts/general_foundicons.ttf") format("truetype"), url("/fonts/foundicons.svg#GeneralFoundicons") format("svg");
+  src: url("fonts/foundicons.eot");
+  src: url("fonts/foundicons.eot?#iefix") format("embedded-opentype"), url("fonts/foundicons.woff") format("woff"), url("fonts/general_foundicons.ttf") format("truetype"), url("fonts/foundicons.svg#GeneralFoundicons") format("svg");
   font-weight: normal;
   font-style: normal;
 }
